src/assets/scss/styles.scss
* {
  margin: 0;
  padding: 0;
  font-family: "Instagram Sans", sans-serif;
}

.layout {
  display: flex;
  flex-direction: column;
}

.sidebar {
  display: flex;
  position: sticky;
  top: 0;
  width: 100%;
  height: fit-content;
  background-color: #fff;
  z-index: 10;

  &-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 8px 12px;
  }

  &-logo-instagram {
    width: 103px;
  }

  &-logo-ig {
    display: none;
  }

  & ul {
    display: none;
  }

  & li {
    list-style: none;
    cursor: pointer;
  }

  &-action {
    display: flex;
    align-items: center;
    gap: 12px;
    padding-top: 4px;
    width: fit-content;
  }

  &-mobile {
    display: flex;
    width: fit-content;
    justify-content: space-between;
  }

  &-medium {
    display: none;
  }

  &-profile {
    width: 24px;
    height: 24px;
    object-fit: cover;
    border-radius: 100%;
  }

  &-more-container {
    display: none;
  }
}

.tabnav {
  display: flex;
  position: sticky;
  bottom: 0;
  width: 100%;
  background-color: #fff;
  border-top: 1px solid #dbdbdb;

  &-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 8px 12px;
  }

  &-container ul {
    display: flex;
    width: 100%;
    justify-content: space-around;
    padding: 8px 0;
    list-style: none;
  }

  &-container li {
    cursor: pointer;
    transition: 0.5s;
  }

  &-container li:hover {
    transform: scale(1.1);
    transition: 0.5s;
  }

  &-profile {
    width: 28px;
    height: 28px;
    object-fit: cover;
    border-radius: 100%;
  }
}

// Home Page Styles
.home {
  display: flex;
  width: 100%;

  &-container {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  .story {
    display: flex;
    width: 100%;
    overflow-x: hidden;
    text-align: center;
    align-items: center;
    background-color: #fafafa;
    border-bottom: 1px solid #dbdbdb;

    &-container {
      display: flex;
      width: 100%;
      gap: 18px;
    }

    &-list {
      padding: 8px;
      gap: 16px;
    }

    &-item {
      display: flex;
      flex-direction: column;
      align-items: center;
      cursor: pointer;
    }

    &-item-upload {
      display: flex;
      flex-direction: column;
      align-items: center;
      cursor: pointer;
    }

    &-pp {
      width: 56px;
      height: 56px;
      border-radius: 100%;
      background-color: #dbdbdb;
      object-fit: cover;
    }

    &-username {
      font-size: 12px;
      margin-top: 8px;
    }

    &-add {
      display: flex;
      position: absolute;
      background-color: #0095f6;
      width: fit-content;
      height: fit-content;
      padding: 2px;
      border: #fafafa 2px solid;
      bottom: 0;
      right: 0;
      border-radius: 100%;
    }
  }

  .post {
    width: 100%;

    &-container {
      display: flex;
      flex-direction: column;
      margin: 0 auto;
      margin-bottom: 16px;
      width: 100%;
    }

    &-image {
      width: 100%;
    }

    &-pp {
      width: 40px;
      height: 40px;
      border-radius: 50%;
      background-color: #dbdbdb;
      margin-right: 16px;
      object-fit: cover;
      cursor: pointer;
    }

    &-header {
      display: flex;
    }

    &-header-container {
      display: flex;
      width: 100%;
      justify-content: space-between;
      margin: 12px;
      align-items: center;
    }

    &-user {
      display: flex;
      align-items: center;
    }

    &-action {
      display: flex;
      justify-content: space-between;
    }

    &-action-container {
      display: flex;
      flex-direction: column;
      width: 100%;
      margin: 12px;
      justify-content: space-between;
      align-items: center;
    }

    &-react {
      display: flex;
      width: 100%;
      align-items: center;
      justify-content: space-between;
    }

    &-react-button {
      display: flex;
      align-items: center;
      cursor: pointer;
      gap: 20px;
    }

    &-like {
      display: flex;
      width: 100%;
      margin: 20px 0 10px 0;
    }

    &-caption {
      display: flex;
      width: 100%;
    }

    &-comment {
      display: flex;
      width: 100%;
      margin: 10px 0;
      cursor: pointer;
    }

    &-time {
      display: flex;
      margin: 10px 0 0 0;
      width: 100%;
    }

    &-input {
      display: none;
    }
  }

  .suggestion {
    display: none;
  }
}

.loading {
  width: 100%;
  height: 100vh;

  &-instagram {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
  }
}

// Resposive Tablet
@media screen and (min-width: 600px) {
  .layout {
    flex-direction: row;
  }

  .sidebar {
    flex-direction: column;
    width: fit-content;
    height: 100vh;
    padding: 0 10px;
    align-items: center;
    border-right: 1px solid #dbdbdb;

    &-container {
      justify-content: flex-start;
      flex-direction: column;
      width: fit-content;
      height: 100%;
      padding: 24px 0;
    }

    &-mobile {
      display: none;
    }

    &-medium {
      display: flex;
      position: relative;
      flex-direction: column;
      justify-content: space-between;
      width: 100%;
      height: 100%;
      padding: 8px 0;
    }

    &-logo-instagram {
      display: none;
    }

    &-logo-ig {
      display: block;
      width: 24px;
      height: 24px;
      margin: 8px;
    }

    &-action {
      display: none;
    }

    & ul {
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 100%;
      justify-content: space-between;
      margin: 56px 0 0 0;
      padding: 8px 0;
      list-style: none;
      gap: 8px;
    }

    & ul li {
      padding: 12px;
      border-radius: 100%;
    }

    & ul li:hover {
      background-color: #fafafa;
    }

    & ul li span {
      display: none;
    }

    &-profile {
      width: 24px;
      height: 24px;
      object-fit: cover;
      border-radius: 100%;
    }

    &-more-container {
      display: block;
      cursor: pointer;
    }

    &-more-container:hover {
      background-color: #fafafa;
    }

    &-more-container span {
      display: none;
    }
  }

  .tabnav {
    display: none;
  }

  .home {
    padding: 56px 0 32px 0;

    .story {
      justify-content: center;
      background-color: transparent;
      border-bottom: 0;
      margin-bottom: 24px;

      &-container {
        max-width: 460px;
      }

      &-list {
        padding: 0px;
      }

      &-item-upload {
        display: none;
      }
    }

    .post {
      &-container {
        margin: 0 auto;
        margin-bottom: 16px;
        width: 100%;
        max-width: 460px;
        border-bottom: 1px solid #dbdbdb;
      }

      &-header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0px;
      }
      &-header-container {
        margin: 12px 0;
      }

      &-action {
        display: flex;
        justify-content: space-between;
      }

      &-action-container {
        display: flex;
        flex-direction: column;
        width: 100%;
        margin: 12px 0;
        justify-content: space-between;
        align-items: center;
      }

      &-time {
        display: none;
      }

      &-input {
        display: flex;
        width: 100%;
        align-items: center;
      }

      &-comment-input {
        display: block;
        width: 100%;
        margin-top: 14px;
        border: 0;
      }

      &-comment-input:focus {
        outline: none;
      }

      &-comment-action {
        display: flex;
        align-items: center;
        gap: 8px;
      }
    }
  }
}

// Responsive Medium Screen (Table Landscape, Small Laptop)
@media screen and (min-width: 900px) {
  .layout {
    flex-direction: row;
  }

  .sidebar {
    flex-direction: column;
    width: fit-content;
    align-items: center;

    &-container {
      flex-direction: column;
      width: fit-content;
      height: 100%;
      padding: 24px 0;
    }

    &-logo-instagram {
      display: none;
    }

    &-logo-ig {
      display: block;
      width: 24px;
      height: 24px;
    }

    &-action {
      display: none;
    }

    & ul li span {
      display: none;
    }

    &-profile {
      width: 24px;
      height: 24px;
      object-fit: cover;
      border-radius: 100%;
    }

    &-more-container {
      display: block;
    }
  }

  .tabnav {
    display: none;
  }

  .home {
    margin: 0 auto;
    max-width: 900px;
    justify-content: center;
    gap: 64px;

    &-container {
      width: fit-content;
    }

    .suggestion {
      display: flex;
      flex-direction: column;
      height: fit-content;
      width: 35%;

      &-container {
        display: flex;
        flex-direction: column;
        width: 100%;
        margin-top: 5px;
      }

      &-pp {
        width: 56px;
        height: 56px;
        border-radius: 100%;
        object-fit: cover;
      }

      &-user {
        display: flex;
        justify-content: space-between;
        gap: 18px;
        align-items: center;
      }

      &-data {
        display: flex;
        align-items: center;
        gap: 12px;
      }

      &-detail {
        display: flex;
        flex-direction: column;
      }

      &-for-you {
        display: flex;
        margin: 24px 0 20px 0;
        justify-content: space-between;
        align-items: center;
      }

      &-friend {
        display: flex;
        flex-direction: column;
        gap: 12px;
      }

      &-friend-pp {
        width: 32px;
        height: 32px;
        border-radius: 100%;
        object-fit: cover;
      }
    }
  }
}

// Responsive Large Screen (Laptop, Desktop)
@media screen and (min-width: 1200px) {
  .sidebar {
    &-container {
      align-items: flex-start;
      padding: 24px 0;
    }

    &-logo-instagram {
      display: block;
      margin: 0 0 0 12px;
    }

    &-logo-ig {
      display: none;
    }

    & ul {
      position: relative;
      flex-direction: column;
      width: 100%;
      justify-content: space-between;
      list-style: none;
      gap: 8px;
      margin: 24px 0 0 0;
    }

    & ul li {
      display: flex;
      gap: 12px;
      align-items: center;
      border-radius: 100px;
      width: 200px;
    }

    & ul li span {
      display: block;
    }

    &-more-container {
      display: flex;
      gap: 12px;
      align-items: center;
      border-radius: 100px;
      width: 200px;
      padding: 12px;
    }

    &-more-container span {
      display: block;
    }
  }
}

